--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,16 @@ body {
     font-family: "Poppins";
     overflow-x: hidden;
 }
+
+.mt-page {
+    margin-top: 90px;
+}
+
+select {
+    border: 0px;
+    background-color: #fff;
+
+    cursor: pointer;
+    /*min-width: 200px;*/
+    width: 100%;
+}
